--- a/src/Custom.css
+++ b/src/Custom.css
@@ -27,3 +27,553 @@ td {
 	text-decoration: none;
 	outline: none;
 }
+body {
+	font-family: 'Conv_Gilroy-Regular';
+	font-size: 12px;
+	color: #000000;
+	font-weight: 500;
+	overflow-x: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Conv_Gilroy-regular';
+}
+
+.user-section {
+	display: flex;
+	align-items: center;
+	background: url("./images/bg.png") no-repeat;
+	width: 100%;
+	min-height: 100vh;
+	background-size: cover;
+	background-position: 0 -250px;
+	padding: 20px 0;
+}
+
+.user-bg {
+	background: #e9e9ed !important;
+	border-radius: 7px;
+	padding: 50px 0px;
+	box-shadow: 10px 10px 13px 1px rgb(0 0 0 / 10%);
+	min-height: 70vh;
+}
+
+.user-bg h4 {
+	color: #1d1e3b;
+	font-size: 16px;
+	font-weight: 800;
+}
+
+.user-bg .form-control {
+	height: 40px;
+	font-weight: 400;
+	border: #cccccf solid 1px;
+	color: #000;
+	font-size: 12px;
+	font-family: 'Conv_Gilroy-Regular';
+}
+
+.panel .form-control,
+.modal-body .form-control,.content .form-control{
+	height: 40px;
+	color:#000;
+	font-size: 12px;
+	font-family: 'Conv_Gilroy-regular';
+	border: #eaeaea solid 1px;
+	    padding: 0.375rem 0.5rem;
+		    position: relative;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: transparent;
+  background: none;
+  z-index: 1;
+  margin-left: -15px;
+}
+input[type="date"]:before {
+  color: transparent;
+  background: none;
+  display: block;
+  font-family: 'FontAwesome';
+  content: '\f073';
+
+  width: 15px;
+  height: 20px;
+  position: absolute;
+  top: 7px;
+  right: 6px;
+  color:#5a5a5a;
+}
+.form-control::placeholder,select.form-control:not(.disabled) {
+	color:rgba(0, 0, 0) !important;
+	font-family: 'Conv_Gilroy-regular' !important;
+}
+
+.header {
+	padding: 15px 0;
+	float: left;
+	width: 100%;
+	background: #ebecf0;
+	border-bottom: solid 2px rgba(0, 0, 0, 0.1);
+}
+
+.sidebar {
+    background: url("./images/sidebar-bg.png") no-repeat #ea652b bottom left;
+    padding: 20px 10px;
+    min-height: calc(100vh - 0px);
+    background-size: contain;
+    /* height: 100%; */
+    position: sticky;
+    top: 0px
+}
+
+.sidebar>ul>li {
+	margin-bottom: 10px;
+}
+
+.sidebar>ul>li>a {
+	font-weight: 400;
+	display: block;
+	font-family: 'Conv_Gilroy-regular';
+	color: #ffffff;
+	font-size: 16px;
+	padding: 10px 15px;
+	border-radius: 5px;
+}
+
+.sidebar ul li ul {
+	padding-left: 35px;
+}
+
+.sidebar ul li a.active {
+	/* background: #ffffff; */
+	color: #ea652b;
+}
+
+.sidebar ul li ul li a {
+	font-size: 15px;
+	color: #ffffff;
+	display: block;
+	font-family: 'Conv_Gilroy-regular';
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.heading h3 {
+	font-weight: 700;
+	color: #c55a11;
+	font-size: 25px;
+	margin: 0;
+}
+
+.table .dropdown-menu .dropdown-item {
+	font-size: 13px;
+}
+
+.panel {
+	margin-top: 20px;
+	border: solid 1px rgb(113 113 113 / 20%);
+	border-radius: 5px;
+}
+
+.head_top {
+	padding: 10px 15px;
+	border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+.head_top h4 {
+	font-size: 14px;
+	color: #ea652b;
+	margin-bottom: 0px;
+	font-weight: 800;
+}
+
+.head_top h5 {
+	font-size: 14px;
+	color: #ea652b;
+	margin-bottom: 0px;
+	font-weight: 800;
+}
+
+.user-dropdown {
+	background: #ffffff;
+	width: 210px;
+	text-align: left;
+	height: 36px;
+	font-family: 'Conv_Gilroy-regular';
+}
+
+.user-dropdown.dropdown-toggle::after {
+	float: right;
+	margin-top: 11px;
+	color: #8f90ab;
+}
+
+.panel .table td .name {
+	font-size: 14px;
+	font-family: 'Conv_Gilroy-regular';
+}
+
+ul.listing li {
+	font-size: 14px;
+	font-family: 'Conv_Gilroy-regular';
+	color: #323031;
+	padding: 0px 20px 18px 20px;
+	position: relative;
+}
+
+ul.listing li:last-child {
+	padding-bottom: 0px;
+}
+
+ul.listing li:before {
+	content: "";
+	background: #255ac6;
+	width: 14px;
+	height: 14px;
+	position: absolute;
+	border-radius: 25px;
+	top: 5px;
+	left: 0;
+}
+
+ul.listing li:last-child:after {
+	content: none;
+}
+
+ul.listing li:after {
+	content: "";
+	border: dashed 1px #cccccc;
+	position: absolute;
+	top: 19px;
+	left: 6px;
+	height: 23px;
+}
+
+ul.listing li .time {
+	color: rgba(0, 0, 0, 0.5);
+	font-size: 13px;
+}
+.chart-listing {
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
+}
+
+.chart-listing li {
+	display: flex;
+	text-align: left;
+	color: #323031;
+	font-size: 22px;
+	font-family: 'Conv_Gilroy-regular';
+	line-height: 18px;
+	margin: 0 15px;
+}
+
+.chart-listing li span {
+	color: rgba(0, 0, 0, 0.5);
+	font-size: 12px;
+	font-family: 'Conv_Gilroy-Regular';
+}
+
+.chart-listing li .bg {
+	width: 14px;
+	height: 14px;
+	border-radius: 25px;
+	margin-right: 10px;
+	box-shadow: 5px 5px 10px 0 #c7c7c7;
+}
+
+.blue-bg {
+	background: #093076;
+}
+
+.black-bg {
+	background: #000000;
+}
+
+.gray-bg {
+	background: #f5f5f7;
+}
+
+.orange-bg {
+	background: #f0874e;
+}
+
+.light-blue-bg {
+	background: #2f68c3;
+}
+
+.yellow-bg {
+	background: #f79942;
+}
+
+.light-bg {
+	background: #8f9496;
+}
+.btn-orange {
+	background: #e55622;
+	/* background: -moz-linear-gradient(left, #f0874e 0%, #e55622 84%); */
+	/* FF3.6-15 */
+	/* background: -webkit-linear-gradient(left, #f0874e 0%, #e55622 84%); */
+	/* Chrome10-25,Safari5.1-6 */
+	/* background: linear-gradient(to right, #f0874e 0%, #e55622 84%); */
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0874e', endColorstr='#e55622', GradientType=1);
+	/* IE6-9 */
+	color: #ffffff;
+	font-size: 14px;
+	font-weight: 500;
+	padding: 0.6rem 1.5rem;
+	border-radius: 5px;
+}
+.btn-orange:hover{
+	box-shadow: 4px 4px 5px 2px rgb(0 0 0 / 10%);
+}
+
+.btn-custom {
+	background:#ea652b;
+	font-size: 14px;
+	color: #fff;
+	height: 40px;
+	padding: 0.375rem 1rem;
+	    border-radius: 5px;
+}
+.btn-custom.btn-custom-height{
+	height:30px;
+	font-size:13px;
+	    line-height: 15px;
+	
+}
+.btn-close {
+	border: #f6933e solid 1px;
+	background: #ffffff;
+	color: #000000;
+	    padding: 0.5rem 0.75rem;
+	font-size: 14px;
+}
+
+.text-orange {
+	color: #e75b25;
+}
+
+.text-gray {
+	color: #767684;
+}
+
+.font-18 {
+	font-size: 16px;
+}
+
+.font-bold,strong,b {
+	font-family: 'Conv_Gilroy-regular';
+}
+
+.font-r {
+	font-family: 'Conv_Gilroy-Regular';
+}
+
+
+.mb-100 {
+	margin-bottom: 100px;
+}
+
+.mt-100 {
+	margin-top: 100px;
+}
+
+.custom-textfield {
+	border: solid 1px rgb(179 176 176 / 10%);
+	width: 135px;
+	font-size: 14px;
+	height: 32px !important;
+	font-family: 'Conv_Gilroy-regular';
+	color: rgba(0, 0, 0, 0.5);
+	position: relative;
+}
+
+.custom-textfield.height {
+	height: 27px !important;
+}
+
+select.custom-textfield {
+	padding: 0.375rem 0.2rem;
+}
+
+
+
+.page-link {
+	color: #909090;
+}
+
+.page-item.active .page-link {
+	z-index: 1;
+	color: #fff;
+	background-color: #f6933e;
+	border-color: #f6933e;
+}
+
+
+.progress {
+    width: 80px;
+    height: 80px !important;
+    float: left;
+    line-height: 150px;
+    background: none;
+   
+    box-shadow: none;
+    position: relative
+}
+
+.progress:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 12px solid #fff;
+    position: absolute;
+    top: 0;
+    left: 0
+}
+
+.progress>span {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1
+}
+
+.progress .progress-left {
+    left: 0
+}
+
+.progress .progress-bar {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 2px;
+    border-style: solid;
+    position: absolute;
+    top: 0
+}
+
+.progress .progress-left .progress-bar {
+    left: 100%;
+    border-top-right-radius: 80px;
+    border-bottom-right-radius: 80px;
+    border-left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left
+}
+
+.progress .progress-right {
+    right: 0
+}
+
+.progress .progress-right .progress-bar {
+    left: -100%;
+    border-top-left-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-right: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right;
+    animation: loading-1 1.8s linear forwards
+}
+
+.progress .progress-value {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background: #fff;
+    font-size: 20px;
+    color: #000;
+    line-height: 8px;
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    display: flex;
+    
+    flex-direction: column;
+    justify-content: center;
+	
+}
+.progress .progress-value span{
+	font-size:11px;
+	color:#7d86a9;
+}
+.progress.blue .progress-bar {
+    border-color: #ea652b;
+}
+
+.progress.blue .progress-left .progress-bar {
+    animation: loading-2 1.5s linear forwards 1.8s
+}
+
+.progress.yellow .progress-bar {
+    border-color: #fdba04
+}
+
+.progress.yellow .progress-right .progress-bar {
+    animation: loading-3 1.8s linear forwards
+}
+
+.progress.yellow .progress-left .progress-bar {
+    animation: none
+}
+@keyframes loading-1 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg)
+    }
+
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg)
+    }
+}
+
+@keyframes loading-2 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg)
+    }
+
+    100% {
+        -webkit-transform: rotate(144deg);
+        transform: rotate(144deg)
+    }
+}
+
+@keyframes loading-3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg)
+    }
+
+    100% {
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg)
+    }
+}
+
+.table th, .table td{
+	font-size:12px;
+}
+.table th{
+	font-family: 'Conv_Gilroy-regular';
+	color:#ea652b;
+}
+.custom-dropdown{
+	padding: 10px 15px;
+min-width: 220px;
+font-size: 15px;
+
+top:5px !important;
+}
