--- a/src/Custom.css
+++ b/src/Custom.css
@@ -4,6 +4,11 @@
 	box-sizing: border-box;
 }
 
+.cursor{
+	cursor: auto;
+	cursor: pointer;
+}
+
 body,
 h1,
 h2,
@@ -27,6 +32,7 @@ td {
 	text-decoration: none;
 	outline: none;
 }
+
 body {
 	font-family: 'Conv_Gilroy-Regular';
 	font-size: 12px;
@@ -79,37 +85,42 @@ h6 {
 }
 
 .panel .form-control,
-.modal-body .form-control,.content .form-control{
+.modal-body .form-control,
+.content .form-control {
 	/* height: 40px; */
-	color:#000;
+	color: #000;
 	font-size: 12px;
 	font-family: 'Conv_Gilroy-regular';
 	border: #eaeaea solid 1px;
-	    padding: 0.375rem 0.5rem;
-		    position: relative;
+	padding: 0.375rem 0.5rem;
+	position: relative;
 }
-input[type="date"]::-webkit-calendar-picker-indicator {
-  color: transparent;
-  background: none;
-  z-index: 1;
-  margin-left: -15px;
-}
-input[type="date"]:before {
-  color: transparent;
-  background: none;
-  display: block;
-  font-family: 'FontAwesome';
-  content: '\f073';
 
-  width: 15px;
-  height: 20px;
-  position: absolute;
-  top: 7px;
-  right: 6px;
-  color:#5a5a5a;
+input[type="date"]::-webkit-calendar-picker-indicator {
+	color: transparent;
+	background: none;
+	z-index: 1;
+	margin-left: -15px;
 }
-.form-control::placeholder,select.form-control:not(.disabled) {
-	color:rgba(0, 0, 0) !important;
+
+input[type="date"]:before {
+	color: transparent;
+	background: none;
+	display: block;
+	font-family: 'FontAwesome';
+	content: '\f073';
+
+	width: 15px;
+	height: 20px;
+	position: absolute;
+	top: 7px;
+	right: 6px;
+	color: #5a5a5a;
+}
+
+.form-control::placeholder,
+select.form-control:not(.disabled) {
+	color: rgba(0, 0, 0) !important;
 	font-family: 'Conv_Gilroy-regular' !important;
 }
 
@@ -122,13 +133,13 @@ input[type="date"]:before {
 }
 
 .sidebar {
-    background: url("./images/sidebar-bg.png") no-repeat #ea652b bottom left;
-    padding: 20px 10px;
-    min-height: calc(100vh - 0px);
-    background-size: contain;
-    /* height: 100%; */
-    position: sticky;
-    top: 0px
+	background: url("./images/sidebar-bg.png") no-repeat #ea652b bottom left;
+	padding: 20px 10px;
+	min-height: calc(100vh - 0px);
+	background-size: contain;
+	/* height: 100%; */
+	position: sticky;
+	top: 0px
 }
 
 .sidebar>ul>li {
@@ -258,6 +269,7 @@ ul.listing li .time {
 	color: rgba(0, 0, 0, 0.5);
 	font-size: 13px;
 }
+
 .chart-listing {
 	display: flex;
 	justify-content: center;
@@ -315,6 +327,7 @@ ul.listing li .time {
 .light-bg {
 	background: #8f9496;
 }
+
 .btn-orange {
 	background: #e55622;
 	/* background: -moz-linear-gradient(left, #f0874e 0%, #e55622 84%); */
@@ -323,7 +336,7 @@ ul.listing li .time {
 	/* Chrome10-25,Safari5.1-6 */
 	/* background: linear-gradient(to right, #f0874e 0%, #e55622 84%); */
 	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0874e', endColorstr='#e55622', GradientType=1);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f0874e', endColorstr='#e55622', GradientType=1);
 	/* IE6-9 */
 	color: #ffffff;
 	font-size: 14px;
@@ -331,29 +344,32 @@ ul.listing li .time {
 	padding: 0.6rem 1.5rem;
 	border-radius: 5px;
 }
-.btn-orange:hover{
+
+.btn-orange:hover {
 	box-shadow: 4px 4px 5px 2px rgb(0 0 0 / 10%);
 }
 
 .btn-custom {
-	background:#ea652b;
+	background: #ea652b;
 	font-size: 14px;
 	color: #fff;
 	height: 40px;
 	padding: 0.375rem 1rem;
-	    border-radius: 5px;
+	border-radius: 5px;
 }
-.btn-custom.btn-custom-height{
-	height:30px;
-	font-size:13px;
-	    line-height: 15px;
-	
+
+.btn-custom.btn-custom-height {
+	height: 30px;
+	font-size: 13px;
+	line-height: 15px;
+
 }
-.btn-close {
+
+.btnclose {
 	border: #f6933e solid 1px;
 	background: #ffffff;
 	color: #000000;
-	    padding: 0.5rem 0.75rem;
+	padding: 0.5rem 0.75rem;
 	font-size: 14px;
 }
 
@@ -369,7 +385,9 @@ ul.listing li .time {
 	font-size: 16px;
 }
 
-.font-bold,strong,b {
+.font-bold,
+strong,
+b {
 	font-family: 'Conv_Gilroy-regular';
 }
 
@@ -419,155 +437,159 @@ select.custom-textfield {
 
 
 .progress {
-    width: 80px;
-    height: 80px !important;
-    float: left;
-    line-height: 150px;
-    background: none;
-   
-    box-shadow: none;
-    position: relative
+	width: 80px;
+	height: 80px !important;
+	float: left;
+	line-height: 150px;
+	background: none;
+
+	box-shadow: none;
+	position: relative
 }
 
 .progress:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: 12px solid #fff;
-    position: absolute;
-    top: 0;
-    left: 0
+	content: "";
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	border: 12px solid #fff;
+	position: absolute;
+	top: 0;
+	left: 0
 }
 
 .progress>span {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    z-index: 1
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	z-index: 1
 }
 
 .progress .progress-left {
-    left: 0
+	left: 0
 }
 
 .progress .progress-bar {
-    width: 100%;
-    height: 100%;
-    background: none;
-    border-width: 2px;
-    border-style: solid;
-    position: absolute;
-    top: 0
+	width: 100%;
+	height: 100%;
+	background: none;
+	border-width: 2px;
+	border-style: solid;
+	position: absolute;
+	top: 0
 }
 
 .progress .progress-left .progress-bar {
-    left: 100%;
-    border-top-right-radius: 80px;
-    border-bottom-right-radius: 80px;
-    border-left: 0;
-    -webkit-transform-origin: center left;
-    transform-origin: center left
+	left: 100%;
+	border-top-right-radius: 80px;
+	border-bottom-right-radius: 80px;
+	border-left: 0;
+	-webkit-transform-origin: center left;
+	transform-origin: center left
 }
 
 .progress .progress-right {
-    right: 0
+	right: 0
 }
 
 .progress .progress-right .progress-bar {
-    left: -100%;
-    border-top-left-radius: 80px;
-    border-bottom-left-radius: 80px;
-    border-right: 0;
-    -webkit-transform-origin: center right;
-    transform-origin: center right;
-    animation: loading-1 1.8s linear forwards
+	left: -100%;
+	border-top-left-radius: 80px;
+	border-bottom-left-radius: 80px;
+	border-right: 0;
+	-webkit-transform-origin: center right;
+	transform-origin: center right;
+	animation: loading-1 1.8s linear forwards
 }
 
 .progress .progress-value {
-    width: 90%;
-    height: 90%;
-    border-radius: 50%;
-    background: #fff;
-    font-size: 20px;
-    color: #000;
-    line-height: 8px;
-    text-align: center;
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    display: flex;
-    
-    flex-direction: column;
-    justify-content: center;
-	
+	width: 90%;
+	height: 90%;
+	border-radius: 50%;
+	background: #fff;
+	font-size: 20px;
+	color: #000;
+	line-height: 8px;
+	text-align: center;
+	position: absolute;
+	top: 5%;
+	left: 5%;
+	display: flex;
+
+	flex-direction: column;
+	justify-content: center;
+
 }
-.progress .progress-value span{
-	font-size:11px;
-	color:#7d86a9;
+
+.progress .progress-value span {
+	font-size: 11px;
+	color: #7d86a9;
 }
+
 .progress.blue .progress-bar {
-    border-color: #ea652b;
+	border-color: #ea652b;
 }
 
 .progress.blue .progress-left .progress-bar {
-    animation: loading-2 1.5s linear forwards 1.8s
+	animation: loading-2 1.5s linear forwards 1.8s
 }
 
 .progress.yellow .progress-bar {
-    border-color: #fdba04
+	border-color: #fdba04
 }
 
 .progress.yellow .progress-right .progress-bar {
-    animation: loading-3 1.8s linear forwards
+	animation: loading-3 1.8s linear forwards
 }
 
 .progress.yellow .progress-left .progress-bar {
-    animation: none
+	animation: none
 }
-@keyframes loading-1 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg)
-    }
 
-    100% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg)
-    }
+@keyframes loading-1 {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg)
+	}
+
+	100% {
+		-webkit-transform: rotate(180deg);
+		transform: rotate(180deg)
+	}
 }
 
 @keyframes loading-2 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg)
-    }
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg)
+	}
 
-    100% {
-        -webkit-transform: rotate(144deg);
-        transform: rotate(144deg)
-    }
+	100% {
+		-webkit-transform: rotate(144deg);
+		transform: rotate(144deg)
+	}
 }
 
 @keyframes loading-3 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg)
-    }
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg)
+	}
 
-    100% {
-        -webkit-transform: rotate(135deg);
-        transform: rotate(135deg)
-    }
+	100% {
+		-webkit-transform: rotate(135deg);
+		transform: rotate(135deg)
+	}
 }
 
-.table th	{
+.table th {
 	font-family: 'Conv_Gilroy-regular';
-	color:#ea652b;
+	color: #ea652b;
 }
-.custom-dropdown{
+
+.custom-dropdown {
 	padding: 10px 10px;
 	min-width: 220px;
 	font-size: 13px;
@@ -578,12 +600,75 @@ select.custom-textfield {
 	font-size: 14px;
 	font-family: 'Conv_Gilroy-regular';
 }
+
 .table .dropdown-menu .dropdown-item {
 	font-size: 13px;
 }
-.table th, .table td{
-	font-size:12px;
+
+.table th,
+.table td {
+	font-size: 12px;
 }
-.table>:not(caption)>*>*{
+
+.table>:not(caption)>*>* {
 	padding: .7rem .5rem;
+}
+
+tt {
+	color: red;
+}
+
+.custom-file-uploader {
+	position: relative;
+}
+
+.custom-file-uploader .btn-custom {
+
+	line-height: 15px;
+	height: 30px;
+}
+
+.custom-file-uploader input[type=file] {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	height: 30px;
+}
+
+.custom-file-input {
+	position: relative;
+	z-index: 2;
+	width: 100%;
+	height: calc(2.25rem + 2px);
+	margin: 0;
+	opacity: 0;
+}
+
+.modal-background {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.custom-tabs.nav-tabs .nav-item {
+	border-right: #b4b4b5 solid 1px;
+}
+
+.custom-tabs.nav-tabs .nav-item:last-child {
+	border: 0;
+}
+
+.custom-tabs.nav-tabs .nav-link {
+	font-size: 16px;
+	font-family: 'Conv_Gilroy-regular';
+	color: #000000;
+	padding: .2rem 0rem;
+	margin: 0 15px;
+	border: 0;
+	line-height: 18px;
+}
+
+.custom-tabs.nav-tabs .nav-link.active {
+	background: transparent;
+	color: #ea652b !important;
+	border-bottom: #ea652b solid 2px;
 }
